Add vendas endpoint
